--- a/index.html
+++ b/index.html
@@ -2,15 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="./css/layout.css">
   <link rel="stylesheet" href="./css/reset.css">
   <link rel="stylesheet" href="./css/styles.css">
-  <title>Frontend Mentor | Intro section with dropdown navigation</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+  <title>Intro section with dropdown navigation</title>
   <style>
     .attribution { font-size: 11px; text-align: center; }
     .attribution a { color: hsl(228, 45%, 44%); }
@@ -18,40 +15,48 @@
 </head>
 <body>
   <div class="container">
-    <div class="row mobile-menu-div off">
-      <div class="menu-content ">
-        <div style="text-align: end">
-          <img id="cross-icon" src="./images/icon-close-menu.svg" alt="cross-img">
+    <div class="row mobile-menu-div mobile">
+      <div class="column-half column-half-menu">
+        <div class="logo">
+          <img src="./images/logo.svg" alt="logo">
         </div>
-        <div class="p-holder">
-          <p class="p-menu">Features</p>
-          <p class="p-menu">Company</p>
-          <p class="p-menu">Careers</p>
-          <p class="p-menu">About</p>
-          <button>Login</button>
-          <button>Register</button>
+      </div>
+      <div class="column-half column-half-menu">
+        <div class="menu-bars">
+          <img id="menu-icon" src="./images/icon-menu.svg" alt="menu-bars">
+        </div>
+        <div class="menu-content off">
+          <div style="text-align: end">
+            <img id="cross-icon" src="./images/icon-close-menu.svg" alt="cross-img">
+          </div>
+          <div class="p-holder">
+            <p class="p-menu">Features</p>
+            <p class="p-menu">Company</p>
+            <p class="p-menu">Careers</p>
+            <p class="p-menu">About</p>
+            <button>Login</button>
+            <button>Register</button>
+          </div>
         </div>
       </div>
     </div>
-    <div class="row desktop-menu-div">
+    <div class="row desktop-menu-div desktop">
       <div class="column-half"></div>
       <div class="column-half"></div>
     </div>
     <div class="row">
-      <div class="column-half"></div>
-      <div class="column-half"></div>
+      <div class="column-half">
+        <img class="mobile" src="./images/image-hero-mobile.png" alt="image">
+        <img class="desktop" src="./images/image-hero-desktop.png" alt="image">
+      </div>
+      <div class="column-half content-holder" style="text-align: center;">
+        <h1>Make remote work</h1>
+        <p>Get your team in sync, no matter your location. Streamline processes,
+        create team rituals, and watch productivity soar.</p>
+        <button>Learn more</button>
+      </div>
     </div>
   </div>
-  Login
-  Register
-
-  Make remote work
-
-  Get your team in sync, no matter your location. Streamline processes,
-  create team rituals, and watch productivity soar.
-
-  Learn more
-
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
     Coded by <a href="#">Your Name Here</a>.
