working on desktop

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </div>
       </div>
       <div class="column-half column-half-menu">
-        <div class="menu-bars">
+        <div class="menu-bars" style="text-align: end;">
           <img id="menu-icon" src="./images/icon-menu.svg" alt="menu-bars">
         </div>
         <div class="menu-content off">
@@ -41,15 +41,26 @@
       </div>
     </div>
     <div class="row desktop-menu-div desktop">
-      <div class="column-half"></div>
-      <div class="column-half"></div>
+      <div class="column-half flex" style="justify-content: space-between;">
+        <div class="logo">
+          <img src="./images/logo.svg" alt="logo">
+        </div>
+        <p class="p-menu">Features</p>
+        <p class="p-menu">Company</p>
+        <p class="p-menu">Careers</p>
+        <p class="p-menu">About</p>
+      </div>
+      <div class="column-half buttons-holder">
+        <button>Login</button>
+        <button>Register</button>
+      </div>
     </div>
-    <div class="row">
-      <div class="column-half">
+    <div class="row desktop-reverse content-holder">
+      <div class="column-half ">
         <img class="mobile" src="./images/image-hero-mobile.png" alt="image">
         <img class="desktop" src="./images/image-hero-desktop.png" alt="image">
       </div>
-      <div class="column-half content-holder" style="text-align: center;">
+      <div class="column-half text-holder" style=";">
         <h1>Make remote work</h1>
         <p>Get your team in sync, no matter your location. Streamline processes,
         create team rituals, and watch productivity soar.</p>
