--- a/index.html
+++ b/index.html
@@ -25,19 +25,24 @@
         <div class="menu-bars" style="text-align: end;">
           <img id="menu-icon" src="./images/icon-menu.svg" alt="menu-bars">
         </div>
-        <div class="menu-content off">
-          <div style="text-align: end">
-            <img id="cross-icon" src="./images/icon-close-menu.svg" alt="cross-img">
-          </div>
-          <div class="p-holder">
-            <p class="p-menu">Features</p>
-            <p class="p-menu">Company</p>
-            <p class="p-menu">Careers</p>
-            <p class="p-menu">About</p>
-            <button>Login</button>
-            <button>Register</button>
+        <div class="menu-div-mobile on">
+          <div class="menu-content ">
+            <div style="text-align: end">
+              <img id="cross-icon" src="./images/icon-close-menu.svg" alt="cross-img">
+            </div>
+            <div class="p-holder">
+              <p class="p-menu">Features <img src="./images/icon-arrow-down.svg" alt="arrow-down"></p>
+              <p class="p-menu">Company <img src="./images/icon-arrow-down.svg" alt="arrow-down"></p>
+              <p class="p-menu">Careers</p>
+              <p class="p-menu">About</p>
+              <div class="button-holder-mobile">
+                <button class="login-b">Login</button>
+                <button class="reg-b">Register</button>
+              </div>
+            </div>
           </div>
         </div>
+
       </div>
     </div>
     <div class="row desktop-menu-div desktop">
@@ -45,14 +50,14 @@
         <div class="logo">
           <img src="./images/logo.svg" alt="logo">
         </div>
-        <p class="p-menu">Features</p>
-        <p class="p-menu">Company</p>
+        <p class="p-menu">Features<img src="./images/icon-arrow-down.svg" alt="arrow-down"></p>
+        <p class="p-menu">Company<img src="./images/icon-arrow-down.svg" alt="arrow-down"></p>
         <p class="p-menu">Careers</p>
         <p class="p-menu">About</p>
       </div>
       <div class="column-half buttons-holder">
-        <button>Login</button>
-        <button>Register</button>
+        <button class="login-b">Login</button>
+        <button class="reg-b">Register</button>
       </div>
     </div>
     <div class="row desktop-reverse content-holder">
