--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
               <img id="cross-icon" src="./images/icon-close-menu.svg" alt="cross-img">
             </div>
             <div class="p-holder">
-              <p class="p-menu">Features <img src="./images/icon-arrow-down.svg" alt="arrow-down"></p>
+              <p class="p-menu">Features <img src="./images/icon-arrow-down.svg" alt="arrow-down" class="arrow-down"></p>
               <p class="p-menu">Company <img src="./images/icon-arrow-down.svg" alt="arrow-down"></p>
               <p class="p-menu">Careers</p>
               <p class="p-menu">About</p>
@@ -77,5 +77,6 @@
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
     Coded by <a href="#">Your Name Here</a>.
   </div>
+  <script src="./js/main.js"></script>
 </body>
 </html>
