mobile menu js done

--- a/index.html
+++ b/index.html
@@ -25,14 +25,25 @@
         <div class="menu-bars" style="text-align: end;">
           <img id="menu-icon" src="./images/icon-menu.svg" alt="menu-bars">
         </div>
-        <div class="menu-div-mobile on">
+        <div class="menu-div-mobile off">
           <div class="menu-content ">
             <div style="text-align: end">
               <img id="cross-icon" src="./images/icon-close-menu.svg" alt="cross-img">
             </div>
             <div class="p-holder">
-              <p class="p-menu">Features <img src="./images/icon-arrow-down.svg" alt="arrow-down" class="arrow-down"></p>
-              <p class="p-menu">Company <img src="./images/icon-arrow-down.svg" alt="arrow-down"></p>
+              <p class="p-menu features-mobile-click">Features<img style="margin-left: 1rem;" src="./images/icon-arrow-down.svg" alt="arrow-down" class="arrow-down"></p>
+              <div class="features-menu d-none">
+                <p><img style="margin: 0 1rem;" src="./images/icon-todo.svg" alt="todo">Todo List</p>
+                <p><img style="margin: 0 1rem;" src="./images/icon-calendar.svg" alt="calendar">Calendar</p>
+                <p><img style="margin: 0 1rem;" src="./images/icon-reminders.svg" alt="reminders">Reminders</p>
+                <p><img style="margin: 0 1rem;" src="./images/icon-planning.svg" alt="planning">Planning</p>
+              </div>
+              <p class="p-menu company-mobile-click">Company<img style="margin-left: 1rem;" src="./images/icon-arrow-down.svg" alt="arrow-down"></p>
+              <div class="company-menu d-none">
+                <p style="margin: 1rem;">History</p>
+                <p style="margin: 1rem;">Our Team</p>
+                <p style="margin: 1rem;">Blog</p>
+              </div>
               <p class="p-menu">Careers</p>
               <p class="p-menu">About</p>
               <div class="button-holder-mobile">
@@ -50,8 +61,8 @@
         <div class="logo">
           <img src="./images/logo.svg" alt="logo">
         </div>
-        <p class="p-menu">Features<img src="./images/icon-arrow-down.svg" alt="arrow-down"></p>
-        <p class="p-menu">Company<img src="./images/icon-arrow-down.svg" alt="arrow-down"></p>
+        <p class="p-menu">Features<img style="margin-left: 1rem;" src="./images/icon-arrow-down.svg" alt="arrow-down"></p>
+        <p class="p-menu">Company<img style="margin-left: 1rem;" src="./images/icon-arrow-down.svg" alt="arrow-down"></p>
         <p class="p-menu">Careers</p>
         <p class="p-menu">About</p>
       </div>
