desktop js done

--- a/index.html
+++ b/index.html
@@ -57,12 +57,28 @@
       </div>
     </div>
     <div class="row desktop-menu-div desktop">
-      <div class="column-half flex" style="justify-content: space-between;">
+      <div class="column-half flex" style="justify-content: space-between; ">
         <div class="logo">
           <img src="./images/logo.svg" alt="logo">
         </div>
-        <p class="p-menu">Features<img style="margin-left: 1rem;" src="./images/icon-arrow-down.svg" alt="arrow-down"></p>
-        <p class="p-menu">Company<img style="margin-left: 1rem;" src="./images/icon-arrow-down.svg" alt="arrow-down"></p>
+        <div>
+          <p class="p-menu features-click">Features<img style="margin-left: 1rem; " src="./images/icon-arrow-down.svg" alt="arrow-down"></p>
+          <div class="features-menu-destop d-none">
+            <p><img style="margin-right:  1rem;" src="./images/icon-todo.svg" alt="todo">Todo List</p>
+            <p><img style="margin-right:  1rem;" src="./images/icon-calendar.svg" alt="calendar">Calendar</p>
+            <p><img style="margin-right:  1rem;" src="./images/icon-reminders.svg" alt="reminders">Reminders</p>
+            <p><img style="margin-right:  1rem;" src="./images/icon-planning.svg" alt="planning">Planning</p>
+          </div>
+        </div>
+        <div>
+          <p class="p-menu company-click">Company<img style="margin-left: 1rem;" src="./images/icon-arrow-down.svg" alt="arrow-down"></p>
+          <div class="company-menu-destop d-none">
+            <p >History</p>
+            <p >Our Team</p>
+            <p >Blog</p>
+          </div>
+        </div>
+
         <p class="p-menu">Careers</p>
         <p class="p-menu">About</p>
       </div>
