--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="./css/styles.css">
   <title>Intro section with dropdown navigation</title>
   <style>
-    .attribution { font-size: 11px; text-align: center; }
+    .attribution { font-size: 11px; text-align: center; padding-top: 3rem;}
     .attribution a { color: hsl(228, 45%, 44%); }
   </style>
 </head>
@@ -53,7 +53,6 @@
             </div>
           </div>
         </div>
-
       </div>
     </div>
     <div class="row desktop-menu-div desktop">
@@ -95,7 +94,7 @@
         <h1>Make remote work</h1>
         <p>Get your team in sync, no matter your location. Streamline processes,
         create team rituals, and watch productivity soar.</p>
-        <button>Learn more</button>
+        <button class="more-b">Learn more</button>
       </div>
     </div>
   </div>
