main.js improved

--- a/index.html
+++ b/index.html
@@ -31,15 +31,15 @@
               <img id="cross-icon" src="./images/icon-close-menu.svg" alt="cross-img">
             </div>
             <div class="p-holder">
-              <p class="p-menu features-mobile-click">Features<img style="margin-left: 1rem;" src="./images/icon-arrow-down.svg" alt="arrow-down" class="arrow-down"></p>
-              <div class="features-menu d-none">
+              <p class="p-menu click">Features<img style="margin-left: 1rem;" src="./images/icon-arrow-down.svg" alt="arrow-down" class="arrow-down"></p>
+              <div class="features-menu d-none menu">
                 <p><img style="margin: 0 1rem;" src="./images/icon-todo.svg" alt="todo">Todo List</p>
                 <p><img style="margin: 0 1rem;" src="./images/icon-calendar.svg" alt="calendar">Calendar</p>
                 <p><img style="margin: 0 1rem;" src="./images/icon-reminders.svg" alt="reminders">Reminders</p>
                 <p><img style="margin: 0 1rem;" src="./images/icon-planning.svg" alt="planning">Planning</p>
               </div>
-              <p class="p-menu company-mobile-click">Company<img style="margin-left: 1rem;" src="./images/icon-arrow-down.svg" alt="arrow-down"></p>
-              <div class="company-menu d-none">
+              <p class="p-menu click">Company<img style="margin-left: 1rem;" src="./images/icon-arrow-down.svg" alt="arrow-down"></p>
+              <div class="company-menu d-none menu">
                 <p style="margin: 1rem;">History</p>
                 <p style="margin: 1rem;">Our Team</p>
                 <p style="margin: 1rem;">Blog</p>
@@ -61,17 +61,17 @@
           <img src="./images/logo.svg" alt="logo">
         </div>
         <div>
-          <p class="p-menu features-click">Features<img style="margin-left: 1rem; " src="./images/icon-arrow-down.svg" alt="arrow-down"></p>
-          <div class="features-menu-destop d-none">
-            <p><img style="margin-right:  1rem;" src="./images/icon-todo.svg" alt="todo">Todo List</p>
-            <p><img style="margin-right:  1rem;" src="./images/icon-calendar.svg" alt="calendar">Calendar</p>
-            <p><img style="margin-right:  1rem;" src="./images/icon-reminders.svg" alt="reminders">Reminders</p>
-            <p><img style="margin-right:  1rem;" src="./images/icon-planning.svg" alt="planning">Planning</p>
+          <p class="p-menu click">Features<img style="margin-left: 1rem; " src="./images/icon-arrow-down.svg" alt="arrow-down"></p>
+          <div class="features-menu-destop d-none menu">
+            <p><img style="margin-right: 1rem;" src="./images/icon-todo.svg" alt="todo">Todo List</p>
+            <p><img style="margin-right: 1rem;" src="./images/icon-calendar.svg" alt="calendar">Calendar</p>
+            <p><img style="margin-right: 1rem;" src="./images/icon-reminders.svg" alt="reminders">Reminders</p>
+            <p><img style="margin-right: 1rem;" src="./images/icon-planning.svg" alt="planning">Planning</p>
           </div>
         </div>
         <div>
-          <p class="p-menu company-click">Company<img style="margin-left: 1rem;" src="./images/icon-arrow-down.svg" alt="arrow-down"></p>
-          <div class="company-menu-destop d-none">
+          <p class="p-menu click">Company<img style="margin-left: 1rem;" src="./images/icon-arrow-down.svg" alt="arrow-down"></p>
+          <div class="company-menu-destop d-none menu">
             <p >History</p>
             <p >Our Team</p>
             <p >Blog</p>
@@ -100,7 +100,7 @@
   </div>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="https://github.com/yuliia-p">Yuliia Pchelintseva</a>.
   </div>
   <script src="./js/main.js"></script>
 </body>
