--- a/index.html
+++ b/index.html
@@ -98,10 +98,10 @@
       </div>
     </div>
   </div>
-  <div class="attribution">
+  <!-- <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
     Coded by <a href="https://github.com/yuliia-p">Yuliia Pchelintseva</a>.
-  </div>
+  </div> -->
   <script src="./js/main.js"></script>
 </body>
 </html>
